# agape-rs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cargo.toml  process.afdesign  schema.txt
.github/workflows/: code-cov.yml  release.yml  rust.yml
agape/: Cargo.toml
agape/src/: assets.rs  build.rs  error.rs  image.rs  lib.rs  macros.rs  message.rs  renderer.rs  resources.rs  state.rs  style.rs  system.rs
agape/src/element/: mod.rs
agape/src/error/element/: mod.rs
agape/src/renderer/: image.rs  mod.rs  rect.rs  svg.rs  text.rs
agape/src/system/: internal.rs  mod.rs
agape/src/view/: image.rs  mod.rs  rect.rs  text.rs
agape/src/widgets/: button.rs  container.rs  hstack.rs  icon.rs  image.rs  mod.rs  rect.rs  svg.rs  text.rs  text_field.rs  vstack.rs
agape/tests/: image.rs  renderer.rs  system.rs  widget.rs
agape_cli/: Cargo.toml
agape_cli/src/: error.rs  lib.rs  main.rs  parse.rs
agape_cli/tests/: bundle.rs
agape_core/: Cargo.toml  README.md
agape_core/src/: color.rs  lib.rs  position.rs  size.rs
agape_core/tests/: size.rs
agape_layout/: Cargo.toml  README.md
agape_layout/src/: block.rs  empty.rs  horizontal.rs  lib.rs  vertical.rs
agape_layout/tests/: block_alignment.rs  horizontal_alignment.rs  horizontal_layout.rs  vertical_alignment.rs  vertical_layout.rs  vertical_scrolling.rs
agape_macros/: Cargo.toml
agape_macros/src/: derive_widget.rs  lib.rs
agape_renderer/: Cargo.toml
agape_renderer/src/: image.rs  lib.rs  rect.rs  svg.rs  text.rs
agape_renderer/tests/: image.rs  rect.rs  text.rs
core/: Cargo.toml
core/src/: app.rs  colour.rs  layout.rs  lib.rs  main.rs  surface.rs  text.rs
core/src/app/: events.rs  mod.rs  view.rs
core/src/utils/: mod.rs
core/src/widgets/: button.rs  container.rs  list.rs  mod.rs  rect.rs  stack.rs  text.rs
crates/agape/: Cargo.toml
crates/agape/src/: lib.rs  message.rs  state.rs
crates/agape/src/widgets/: button.rs  hstack.rs  image.rs  mod.rs  text.rs  text_field.rs  vstack.rs
crates/agape/tests/: image.rs  message.rs
crates/agape_cli/: README.md
crates/agape_cli/src/: error.rs
crates/agape_cli/tests/: bundle.rs
crates/agape_core/src/: position.rs  size.rs
crates/agape_core/tests/: color.rs
crates/agape_layout/: Cargo.toml
crates/agape_macros/src/: lib.rs
crates/agape_renderer/: Cargo.toml
crates/agape_renderer/src/: rect.rs
crates/widgets/: Cargo.toml
crystal/: Cargo.toml  README.md
crystal/src/: block.rs  empty.rs  error.rs  horizontal.rs  lib.rs  vertical.rs
crystal/tests/: block_alignment.rs  horizontal_alignment.rs  horizontal_layout.rs  horizontal_test.rs  vertical_alignment.rs  vertical_layout.rs  vertical_scrolling.rs
example/: Cargo.toml  main.rs
examples/: .gitignore  Cargo.toml  button.rs  counter.rs  file-explorer.rs  hstack.rs  input.rs  playground.rs  rect.rs  renderer.rs  scroll.rs  spotify.rs  text.rs  vstack.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/file-explorer/: Agape.toml  Cargo.toml  README.md
examples/file-explorer/src/: dir_entry.rs  main.rs
examples/file-explorer/src/ui/: menu_bar.rs  mod.rs
examples/pages/: README.md  sign_in.rs
examples/playground/: Cargo.toml  README.md  build.rs
examples/playground/src/: main.rs
examples/spotify/: README.md  spotify.rs
examples/todo-list/: Cargo.toml  README.md
examples/todo-list/src/: main.rs  messages.rs
helium/: Cargo.toml
helium/shaders/: circle.wgsl  icon.wgsl  rect.wgsl  text.wgsl
helium/shaders/image/: image.vert
helium/src/: app.rs  color.rs  colors.rs  colour.rs  context.rs  error.rs  event.rs  events.rs  layout.rs  lib.rs  macros.rs  page.rs  primitive.rs  renderer.rs  resources.rs  signal.rs  state.rs  system.rs  vertex.rs  view.rs
helium/src/app/: events.rs  mod.rs  view.rs
helium/src/geometry/: mod.rs  renderer.rs  uniform.rs  vertex.rs
helium/src/geometry/pipeline/: circle.rs  icon.rs  image.rs  mod.rs  rect.rs  text.rs
helium/src/layout/: block.rs  horizontal.rs  mod.rs  vertical.rs
helium/src/surface/: circle.rs  icon.rs  image.rs  mod.rs  rect.rs  text.rs
helium/src/utils/: mod.rs
helium/src/view/: circle.rs  icon.rs  image.rs  mod.rs  rect.rs  text.rs
helium/src/widgets/: _await.rs  button.rs  circle.rs  container.rs  gesture.rs  hstack.rs  icon.rs  image.rs  mod.rs  rect.rs  spacer.rs  stack.rs  text.rs  text_field.rs  vstack.rs
helium/tests/: input.rs  system.rs  widget.rs
helium_cli/: Cargo.toml
helium_core/: Cargo.toml  README.md
helium_core/src/: color.rs  lib.rs  position.rs  size.rs
helium_derive/: Cargo.toml
helium_layout/: Cargo.toml
helium_layout/src/: empty.rs  horizontal.rs  lib.rs  vertical.rs
helium_macros/: Cargo.toml
helium_macros/src/: lib.rs
helium_renderer/: Cargo.toml
helium_renderer/shaders/: circle.wgsl  image.wgsl  rect.wgsl  text.wgsl
helium_renderer/src/: error.rs  lib.rs  rect.rs  resources.rs  vertex.rs
helium_renderer/src/builders/: bind_group.rs  buffer.rs  mod.rs  texture.rs  vertex.rs
helium_renderer/src/pipeline/: circle.rs  icon.rs  image.rs  mod.rs  rect.rs  text.rs
helium_renderer/src/primitives/: circle.rs  icon.rs  image.rs  mod.rs  rect.rs  text.rs
properties/: Cargo.toml
properties/src/: lib.rs
renderer/: Cargo.toml
renderer/shaders/: shader.wgsl  surface.vert
renderer/src/: lib.rs  main.rs  vertex.rs
ruby/: Cargo.toml  README.md
ruby/shaders/: circle.wgsl  icon.wgsl  image.wgsl  text.wgsl
ruby/src/: error.rs  lib.rs  vertex.rs
ruby/src/builders/: bind_group.rs  buffer.rs  mod.rs  vertex.rs
ruby/src/pipeline/: circle.rs  icon.rs  image.rs  mod.rs  rect.rs  text.rs
ruby/src/primitives/: circle.rs  icon.rs  image.rs  mod.rs  rect.rs  text.rs
rustui/: Cargo.toml
rustui/shaders/: text.wgsl
rustui/src/: colour.rs  layout.rs  text.rs  vertex.rs
rustui/src/app/: events.rs  (+2 more)
shaders/: text.vert  triangle.vert
src/: app.rs  colour.rs  layout.rs  main.rs  surface.rs  text.rs  vertex.rs  view.rs  widgets.rs
src/utils/: mod.rs
src/widgets/: container.rs  mod.rs  rect.rs  stack.rs  surface.rs  text.rs
(+18 files in other folders)
