[workspace.package]
version = "0.1.0"
authors = ["Wakunguma Kalimukwa <wakunguma13@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2024"
repository = "https://github.com/snubwoody/agape-rs"
categories = ["gui"]
keywords = ["gui","graphics"]

[workspace]
resolver = "3"

members = [
	"agape",
	"examples", 
	"agape_macros",
	"agape_core",
	"agape_layout",
]

[workspace.dependencies]
thiserror = "2.0.9"
image = "0.25.2"
winit = {version = "0.30.11",features = ["rwh_05"]}
bytemuck = { version = "1.16", features = [ "derive" ] }
env_logger = "0.11.5"
log = {version = "0.4.27",features = ["kv"]}
pixels = "0.15.0"
rand = "0.9.1"
tiny-skia = "0.11.4"

