[workspace.package]
version = "0.4.0"
authors = ["Wakunguma Kalimukwa <wakunguma13@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2024"
repository = "https://github.com/snubwoody/agape-rs"
categories = ["gui"]
keywords = ["gui", "graphics"]

[workspace]
resolver = "3"

members = [
    "crates/*",
    "examples/*",
]

[profile.bench]
debug = true


[workspace.dependencies]
agape_core = { version = "0.4.0", path = "crates/agape_core" }
agape_layout = { version = "0.4.0", path = "crates/agape_layout" }
agape_macros = { version = "0.4.0", path = "crates/agape_macros" }
agape_renderer = { version = "0.4.0", path = "crates/agape_renderer" }
agape = { version = "0.4.0", path = "crates/agape" }
thiserror = "2.0.9"
image = "0.25.2"
winit = { version = "0.30.11", features = ["rwh_05"] }
bytemuck = { version = "1.16", features = ["derive"] }
pixels = "0.15.0"
rand = "0.9.1"
tiny-skia = "0.11.4"
cosmic-text = "0.14.2"
usvg = "0.45.1"
resvg = "0.45.1"
tracing = "0.1.41"
# TODO: make this a dev-dependency
tempfile = "3.20.0"

[workspace.lints.clippy]
enum_glob_use = "warn"
branches_sharing_code = "warn"
