[package]
name = "agape"
readme = "../README.md"
description = "A GUI library"
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
thiserror.workspace = true
winit.workspace = true
log.workspace = true
fontdue = "0.9.3"
agape_core.workspace = true
agape_macros.workspace = true
agape_layout.workspace = true
reqwest = { version = "0.12.12", features = ["blocking", "stream", "json"] }
tiny-skia.workspace = true
pixels.workspace = true

[lints]
workspace = true