[package]
name = "agape"
readme = "../README.md"
description = "A GUI library"
documentation = "https://docs.rs/agape"
homepage = "https://github.com/snubwoody/agape-rs"
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
thiserror.workspace = true
winit.workspace = true
log.workspace = true
agape_renderer.workspace = true
agape_core.workspace = true
agape_macros.workspace = true
agape_layout.workspace = true
fontdue = "0.9.3"
tiny-skia.workspace = true
pixels.workspace = true
rand = "0.9.1"
usvg = "0.45.1"
resvg = "0.45.1"
cosmic-text = "0.14.2"

[lints]
workspace = true