[package]
name = "agape_macros"
description = "Macros for agape"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.87"
agape_core.workspace = true

[lints]
workspace = true