[package]
name = "agape_renderer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
cosmic-text.workspace = true
agape_core.workspace = true
tiny-skia.workspace = true
image.workspace = true
resvg.workspace = true
usvg.workspace = true
bon.workspace = true

[lints]
workspace = true
