[package]
name = "examples"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
helium = { path = "../helium", features = ["icon-sets"]}
env_logger = "0.11.8"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"

[[example]]
name = "rect"
path = "rect.rs"

[[example]]
name = "hstack"
path = "hstack.rs"

[[example]]
name = "vstack"
path = "vstack.rs"

[[example]]
name = "text"
path = "text.rs"

[[example]]
name = "button"
path = "button.rs"

