[package]
name = "examples"
edition.workspace = true
version.workspace = true
publish = false

[dev-dependencies]
agape = { path = "../agape" }
env_logger = "0.11.8"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"


[[example]]
name = "rect"
path = "rect.rs"

[[example]]
name = "hstack"
path = "hstack.rs"

[[example]]
name = "vstack"
path = "vstack.rs"

[[example]]
name = "text"
path = "text.rs"

[[example]]
name = "button"
path = "button.rs"

[[example]]
name = "input"
path = "input.rs"

