[package]
name = "helium"
version = "0.1.0"
edition = "2021"

[features]
feather-icons = []
icon-sets = ["feather-icons"]

[dependencies]
image = "0.25.2"
text-to-png = "0.2.0"
winit = {version = "0.29",features = ["rwh_05"]}
tokio = { version = "1.40.0", features = ["full"] }
wgpu = "22.1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
env_logger = "0.11.5"
log = "0.4.22"
async-std = {version = "1.13.0",features = ["attributes"]}
nanoid = "0.4.0"
helium_core = {path = "../helium_core"}
helium_macros = {path = "../helium_macros"}
crystal = {path = "../crystal"}
resvg = "0.44.0"
usvg = "0.44.0"
reqwest = {version = "0.12.12",features = ["blocking"]}
rayon = "1.10.0"
thiserror.workspace = true
