[package]
name = "helium"
version = "0.1.0"
edition = "2021"

[features]
feather-icons = []
icon-sets = ["feather-icons"]

[dependencies]
image.workspace = true
wgpu.workspace = true
thiserror.workspace = true
winit.workspace = true
tokio.workspace = true
bytemuck.workspace = true
log.workspace = true
async-std.workspace = true
nanoid = "0.4.0"
helium_core = {path = "../helium_core"}
helium_macros = {path = "../helium_macros"}
helium_renderer = {path = "../helium_renderer"}
crystal = {path = "../crystal"}
resvg = "0.44.0"
usvg = "0.44.0"
reqwest = {version = "0.12.12",features = ["blocking"]}
rand = "0.8.5"
