[package]
name = "helium"
version = "0.1.0"
edition = "2024"
readme = "../README.md"

[dependencies]
image.workspace = true
thiserror.workspace = true
winit.workspace = true
log.workspace = true
fontdue = "0.9.3"
helium_core = {path = "../helium_core"}
helium_macros = {path = "../helium_macros"}
crystal = {path = "../crystal"}
resvg = "0.44.0"
reqwest = {version = "0.12.12",features = ["blocking","stream","json"]}
tiny-skia.workspace = true
pixels.workspace = true