[package]
name = "agape"
readme = "../README.md"
description = "A GUI library"
documentation = "https://docs.rs/agape"
homepage = "https://github.com/snubwoody/agape-rs"
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
thiserror.workspace = true
winit.workspace = true
agape_renderer.workspace = true
agape_core.workspace = true
agape_macros.workspace = true
agape_layout.workspace = true
tiny-skia.workspace = true
pixels.workspace = true
rand = "0.9.1"
usvg = "0.45.1"
winres = "0.1.12"
tracing.workspace = true
tempfile.workspace = true
winresource = "0.1.23"

[lints]
workspace = true
