[package]
name = "playground"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
agape = { path = "../../agape" }
tracing-subscriber = "0.3.19"
tracing.workspace = true

[build-dependencies]
agape = { path = "../../agape" }

[lints]
workspace = true
